fix: added overflow scroll to the cart modal, in case of many items

--- a/src/components/CartModal/CartModal.module.scss
+++ b/src/components/CartModal/CartModal.module.scss
@@ -36,6 +36,11 @@
   padding: 0 0 35px 0;
   margin: 0 0 35px 0;
   border-bottom: 1px solid $primary-color;
+
+  max-height: 296px;
+  box-sizing: border-box;
+  overflow: auto;
+  padding-right: 0px;
 }
 
 .listElement {
